# weathervane

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: algorithm_improvement.yml  bug_report.yml  config.yml  data_source.yml
.github/workflows/: ci.yml
tests/: conftest.py
tests/unit/: test_backtest_report.py  test_backtest_returns.py  test_db_init.py  test_edgar_client.py  test_edgar_discover.py  test_edgar_parser.py  test_llm_schemas.py  test_scoring_gaussian.py  test_scoring_rolling.py  test_smoke.py  test_universe_loader.py
windvane/: __init__.py  __main__.py  cli.py  config.py  universe.py
windvane/backtest/: __init__.py  prices.py  report.py  returns.py  runner.py
windvane/db/: __init__.py  connection.py  schema.sql
windvane/edgar/: __init__.py  client.py  discover.py  download.py  parser.py
windvane/llm/: __init__.py  client.py  schemas.py  stage1_extract.py  stage2_critique.py
windvane/scan/: __init__.py  agent_prep.py  export.py  pipeline.py  planner.py  validate.py
windvane/scoring/: __init__.py  gaussian.py  rolling_window.py
windvane/watch/: __init__.py  launchd.py  notify.py  quotes.py  rules.py  watcher.py
