[project]
name = "windvane"
version = "0.1.0"
description = "风向标 Windvane — LLM-driven detection of corporate industry pivots and information risk from SEC filings, with Gaussian z-score scoring and a backtest harness."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dan", email = "song.li19981124@gmail.com" }
]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "typer>=0.13.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "apscheduler>=3.10.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
windvane = "windvane.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-recording>=0.13.0",
    "vcrpy>=6.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["windvane"]
artifacts = ["windvane/data/*.csv", "windvane/db/*.sql"]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
    "E501",   # line length — ruff format handles this
    "RUF001", # ambiguous unicode chars in strings (we use Greek μ/σ/α deliberately)
    "RUF002", # ambiguous unicode chars in docstrings
    "RUF003", # ambiguous unicode chars in comments
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
